--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="asset/assets/styles.css" rel="stylesheet">
 
-  <title>$LandDog</title>
+  <title>$ElonMuskFatherof12</title>
 </head>
 
 <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
@@ -71,7 +71,7 @@
         <div class="row">
           <div class="col-12 col-md-8 col-lg-6 text-center text-md-start" style="z-index:999;">
             <div class="d-grid gap-3 mb-4">
-              <h2 class="my-0" style="font-weight:700;font-size: 3rem; color: #1c9ef5;">LandDog</h2>
+              <h2 class="my-0" style="font-weight:700;font-size: 3rem; color: #1c9ef5;">ElonMuskFatherof12</h2>
 
               <!-- <div class="d-grid gap-2">
                 <h1 class="my-0" i18n="header.title1">Total Supply</h1>
@@ -86,18 +86,18 @@
                 <!-- <h4 class="my-0" i18n="header.title3">A Decentralized Marketplace for Rewards</h4> -->
             </div>
             <div class="d-flex flex-row justify-content-center justify-content-md-start">
-              <a href="https://app.uniswap.org/#/swap?&inputCurrency=0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2&outputCurrency=0xAbd601423a2cD5723CB546AcC5C40fb01C3422Cf&use=V2"
+              <a href="https://raydium.io/swap/?utm_source=phantom&utm_medium=list&inputMint=sol&outputMint=6SfgKaVG2XoMporaLrcRbLsJAb6MLJs1AoPZXgHZpump"
                 class="btn btn-launch me-2" target="_blank"><span i18n="all.launch">BUY IT</span></a>
-              <a href="https://etherscan.io/token/0xAbd601423a2cD5723CB546AcC5C40fb01C3422Cf" class="btn btn-launch"
+              <a href="https://dexscreener.com/solana/95dgrovneosaxkhr6rza3okxutn9t6fxpjpveumi76s3" class="btn btn-launch"
                 target="_blank" i18n="home.buyBNB">CHECK IT</a>
             </div>
 
             <div style="display: flex;justify-content: space-between;margin-top: 30px;">
-              <a href="https://coinmarketcap.com/currencies/baby-x-2-0/"><img src="img/dextools.png" alt="" width="70px" style="margin-top: 70px;"></a>
-              <a href="https://coinmarketcap.com/currencies/baby-x/"><img src="img/dexscr.png" alt="" width="70px"style="margin-top: 70px;"></a>
-              <a href="https://ave.ai/token/0xAbd601423a2cD5723CB546AcC5C40fb01C3422Cf-eth"><img src="img/ave.png"
+              <a href="https://www.dextools.io/app/en/solana/pair-explorer/95DGrovneoSAXkhr6RZa3oKxUTn9t6FXPjpveuMi76S3?t=1719415447880"><img src="img/dextools.png" alt="" width="70px" style="margin-top: 70px;"></a>
+              <a href="https://dexscreener.com/solana/95dgrovneosaxkhr6rza3okxutn9t6fxpjpveumi76s3"><img src="img/dexscr.png" alt="" width="70px"style="margin-top: 70px;"></a>
+              <a href="https://x.com/elonfathersol?s=21"><img src="img/ave.png"
                   width="70px" alt=""style="margin-top: 70px;"></a>
-              <a href="https://dexscreener.com/ethereum/0xa1b88a2b6cc9b25e6f7ef547b8837a0226b89c45"><img
+              <a href="https://t.me/ElonMuskFather12"><img
                   src="img/tele.png" alt="" width="70px"style="margin-top: 70px;"></a>
 
 
@@ -165,7 +165,7 @@
                     <div class="d-grid gap-2">
                       <h5 class="card-title my-0 f-col" i18n="content.title5">CA</h5>
                       <p class="card-text my-0" i18n="content.title6">
-                        3dgJZ67LBjeH5hfcoS5ZrPEwxjNvWkjqnwTWPXtUpump
+                        6SfgKaVG2XoMporaLrcRbLsJAb6MLJs1AoPZXgHZpump
                         </p>
                     </div>
                   </div>
@@ -185,7 +185,7 @@
             <div class="d-grid gap-3">
               <div class="d-grid gap-2">
                 <h3 class="my-0"><span i18n="about.title1">How to </span> BUY</h3>
-                <h2 class="my-0 f-col">LandDog</h2>
+                <h2 class="my-0 f-col">ElonMuskFatherof12</h2>
 
               </div>
             </div>
@@ -197,7 +197,7 @@
           <div class="col-12 col-lg-6 offset-lg-6 text-center text-lg-start">
             <div class="d-grid gap-5 mb-4">
               <h4 class="my-0 bg-transparent aos-init" data-aos="flip-up" data-aos-duration="1000" i18n="about.title3">
-                Simple Phases to buy $LandDog</h4>
+                Simple Phases to buy $ElonMuskFatherof12</h4>
               <div class="row g-0 g-md-5">
                 <div class="col-12 col-md-6 mb-4 mb-md-0 text-center text-lg-start bg-transparent aos-init"
                   data-aos="flip-up" data-aos-duration="1500">
@@ -217,7 +217,7 @@
                   data-aos="flip-down" data-aos-duration="2500">
                   <div class="d-grid gap-2">
                     <h2 class="my-0 f-col">Phase 3</h2>
-                    <h6 class="my-0" i18n="about.title6">• Visit RAYDIUM(BUY IT), which has an SOL to $MATT FURIE swap already loaded. Ensure your wallet is connected to RAYDIUM</h6>
+                    <h6 class="my-0" i18n="about.title6">• Visit RAYDIUM(BUY IT), which has an SOL to $ElonMuskFatherof12 swap already loaded. Ensure your wallet is connected to RAYDIUM</h6>
                   </div>
                 </div>
                 <div class="col-12 col-md-6 mb-4 mb-md-0 text-center text-lg-start bg-transparent aos-init"
@@ -299,12 +299,9 @@
           <div class="col-12 col-lg-6 offset-lg-6 text-center text-lg-start bg-transparent aos-init"
             data-aos="fade-down" data-aos-duration="1500">
             <div class="d-grid gap-3 mb-4">
-              <h3 class="my-0">About <span i18n="all.wallet">LandDog</span></h3>
-              <h2 class="my-0 f-col" i18n="wallet.title1">A Hybrid centralized and decentralized solution</h2>
-              <h4 class="my-0" i18n="wallet.title2">An open concept to combine the Baby X Finance project
-                in a
-                better way.</h4>
-              <h4 class="my-0" i18n="wallet.title2">Invite Your Friends.Earn Cryptocurrency Together.</h4>
+              <h3 class="my-0">About <span i18n="all.wallet">ElonMuskFatherof12</span></h3>
+              <h2 class="my-0 f-col" i18n="wallet.title1">Forget Mars</h2>
+              <h4 class="my-0" i18n="wallet.title2">Elon's got a family mission: 12 kids and a call to action on building a brighter future - are you in?</h4>
             </div>
 
           </div>
@@ -680,10 +677,10 @@
                       <img src="./asset/assets/icon/instagram.png" class="social" alt="instagram">
                     </a> -->
                     </a>
-                    <a href="https://t.me/babyxethmoon" class="text-decoration-none me-3" target="_blank">
+                    <a href="https://t.me/ElonMuskFather12" class="text-decoration-none me-3" target="_blank">
                       <img src="asset/assets/icon/telegram.png" class="social" alt="Telegram">
                     </a>
-                    <a href="https://twitter.com/TTM_BABYX" class="text-decoration-none me-3" target="_blank">
+                    <a href="https://x.com/elonfathersol?s=21" class="text-decoration-none me-3" target="_blank">
                       <img src="asset/assets/icon/twitter.png" class="social" alt="Twitter">
                     </a>
 
